--- a/home.html
+++ b/home.html
@@ -84,6 +84,10 @@ body {font-family: 'Poppins', sans-serif; background:#0f172a; color:#fff;}
       <div style="position:relative;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUzJDPAAZXHcFD7gPtwIjylQj2EObFaYo0tQ&s" alt="Movie 4"><span class="badge premium">PREMIUM</span></div>
       <span>Movie 4</span>
     </div>
+      <div class="card-item" data-id="104" data-type="premium" data-content="movie">
+      <div style="position:relative;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUzJDPAAZXHcFD7gPtwIjylQj2EObFaYo0tQ&s" alt="Movie 5"><span class="badge premium">PREMIUM</span></div>
+      <span>Movie 5</span>
+    </div>
   </div>
 
   <h3>Featured Series</h3>
